# dewel

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
dewel/: __init__.py  __main__.py  bot.py  errors.py  eval_parser.py  log_setup.py  manager.py
dewel/commands/: __init__.py  eval.py
dewel/commands/eval/: boilerplate.py  command.py  parser.py
dewel/commands/help/: __init__.py  command.py
