[tool.poetry]
name = "dewel"
version = "0.1.0"
description = ""
authors = ["ooliver1 <oliverwilkes2006@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
velum = {git = "https://github.com/eludris-community/velum", extras = ["speedups"]}
sail = {git = "https://github.com/eludris-community/velum-sail"}

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
