[tool.poetry]
name = "dewel"
version = "0.1.0"
description = "An Eludris bot to aid in programming/development."
authors = ["ooliver1 <oliverwilkes2006@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
velum = { git = "https://github.com/eludris-community/velum" }
sail = { git = "https://github.com/eludris-community/velum-sail" }
aiohttp = { extras = ["speedups"], version = "^3.8.5" }
orjson = "^3.8.3"
uvloop = "^0.17.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
